<resources>
    <string name="app_name">ApkDemo(Default))</string>

    <string name="rb_auto">Auto(Default)</string>
    <string name="rb_chinese">中文(Default)</string>
    <string name="rb_english">English(Default)</string>
    <string name="rb_japanese">日本語(Default)</string>

    <string name="hello">Hello(Default)</string>

    <string name="rb_day">Day(Default)</string>
    <string name="rb_night">Night(Default)</string>
    <string name="rb_custom">Custom(Default)</string>
    <string name="language">Language(Default)</string>
    <string name="theme">Theme(Default)</string>
</resources>
