<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SwitchActivity">

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguage">

        <RadioButton
            android:id="@+id/rbAuto"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/rb_auto"/>

        <RadioButton
            android:id="@+id/rbChinese"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/rb_chinese"/>

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/rb_english"/>

        <RadioButton
            android:id="@+id/rbJapanese"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/rb_japanese"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rbThemeGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTheme">

        <RadioButton
            android:id="@+id/rbThemeAuto"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/rb_auto"/>

        <RadioButton
            android:id="@+id/rbDay"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/rb_day"/>

        <RadioButton
            android:id="@+id/rbNight"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/rb_night"/>

        <RadioButton
            android:id="@+id/rbCustom"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/rb_custom"/>
    </RadioGroup>

    <TextView
        android:text="@string/language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:text="@string/theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvTheme"
        app:layout_constraintTop_toBottomOf="@+id/rbGroup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>